--- a/public/my/s.css
+++ b/public/my/s.css
@@ -1,31 +1,39 @@
+.form-control{
+    width: 500px;
+  }
 .nav.nav-tabs {
-    float: left;
+    /*float: left;
     display: block;
     margin-right: 20px;
     border-bottom:0;
     border-right: 1px solid #ddd;
-    padding-right: 15px;
+    padding-right: 15px;*/
+    margin-top: -50px;
 }
+
 .nav-tabs .nav-link {
     border: 1px solid transparent;
     border-top-left-radius: .25rem;
     border-top-right-radius: .25rem;
-    background: #ccc;
+    background:rgb(187, 222, 243);
+    color:black
 }
 
 .nav-tabs .nav-link.active {
-    color: #495057;
-    background-color:#007bff !important;
+    color: white;
+    background-color:#48729c !important;
     border-color: transparent !important;
 }
 .nav-tabs .nav-link {
     border: 1px solid transparent;
-    border-top-left-radius: 0rem!important;
-    border-top-right-radius: 0rem!important;
+    border-top-left-radius: 0.5rem!important;
+    border-top-right-radius: 0.5rem!important;
 }
-.tab-content>.active {
+/*
+.tab-content .active {
     display: block;
-    background: #007bff;
+    
+    
     min-height: 165px;
 }
 .nav.nav-tabs {
@@ -35,4 +43,4 @@
     border-bottom: 0;
     border-right: 1px solid transparent;
     padding-right: 15px;
-}
+}*/
